# nlp-ru-izard-emotion-detection

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: default.yaml  labels.yaml
configs/hydra/: default.yaml
configs/logger/: mlflow.yaml
configs/model/: rubert_base..yaml  rubert_base.yaml  rubert_cased_conv.yaml  rubert_tiny2.yaml  rubert_tiny2_ruizard.yaml  ruroberta_large.yaml
configs/paths/: default.yaml
configs/train/: bce.yaml  default.yaml  focal.yaml
data/: ru-izard-emotions.dvc
emotion_detection/: commands.py
emotion_detection/configs/: config.yaml
emotion_detection/data/: .gitignore  download_data.py  ru-izard-emotions.dvc
emotion_detection/eval/: evaluate.py  metrics.py  plot_metrics.py
emotion_detection/export/: export_onnx.py  export_tensorrt.sh
emotion_detection/infer/: infer.py  infer_tensorrt.py  infer_triton.py  run_tensorrt_infer.sh  triton_infer.py
emotion_detection/models/: DeepPavlov-rubert-base-cased-conversational.dvc  ai-forever-ruBert-base.dvc  ai-forever-ruRoberta-large.dvc  cointegrated-rubert-tiny2-ruizard.dvc  cointegrated-rubert-tiny2.dvc
emotion_detection/onnx_models/: DeepPavlov-rubert-base-cased-conversational.dvc  ai-forever-ruBert-base.dvc  ai-forever-ruRoberta-large.dvc  cointegrated-rubert-tiny2-ruizard.dvc  cointegrated-rubert-tiny2.dvc
emotion_detection/scripts/: download_data.py  evaluate.py  export_onnx.py  export_tensorrt.sh  infer.py  predict.py  predict_tensorrt.py  run_tensorrt_infer.sh  train.py  triton_client.py  triton_infer.py
emotion_detection/tensorrt_models/: DeepPavlov-rubert-base-cased-conversational.dvc  ai-forever-ruBert-base.dvc  ai-forever-ruRoberta-large.dvc  cointegrated-rubert-tiny2-ruizard.dvc  cointegrated-rubert-tiny2.dvc
emotion_detection/train/: multilabel_classifier.py  train.py
emotion_detection/triton/: Dockerfile  docker-compose.yml  prepare_model_repository.py
emotion_detection/utils/: dvc_pull.py  (+2 more)
(+19 files in other folders)
