[project]
name = "ru-izard-emotion-detection"
version = "0.1.0"
description = "Multi-label emotion detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.3",
    "dvc>=3.67.1",
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "lightning>=2.6.1",
    "marimo>=0.20.4",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "nltk>=3.9.3",
    "onnx>=1.17.0",
    "onnxscript>=0.7.0",
    "pandas>=3.0.1",
    "protobuf>=3.20.0,<4.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "transformers>=5.6.2",
    "tritonclient[http]>=2.53.0",
]

[dependency-groups]
dev = [
    "black>=24.4.0",
    "pre-commit>=4.0.0",
    "ruff>=0.5.0",
    "ipykernel>=6.29.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203"]
